# classification_project

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling.ipynb  05_evaluation.ipynb  06_deployment.ipynb
reports/: automl_comparison.csv  predictions.csv
src/: automl.py  config.py  data_processing.py  evaluation.py  model_training.py
